--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
