--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "socket": "node server.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +19,8 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
