--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "framer-motion": "^11.16.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "mongoose": "^8.9.3",
