--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "framer-motion": "^11.16.4",
+    "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
